src/test/deca/context/valid/class_int.deca
class A {
public int x;
public void method() {
x=3;
}
}