src/test/deca/context/invalid/field_class.deca
//Mauvais champ

// Date: 22.02.2022

class A{
    int a = new A();
}